--- a/src/assets/pages/contact.html
+++ b/src/assets/pages/contact.html
@@ -6,13 +6,8 @@
     <p class="profile__contact-subtitle">お問合せ</p>
 
     <a href="mailto:yuma-wakamiya@kalytero.ne.jp" class="profile__contact-mail">
-      <i
-        class="fas fa-envelope profile__contact-mail-icon"
-        aria-hidden="true"
-      ></i>
-      <span class="profile__contact-mail-text"
-        >yuma-wakamiya@kalytero.ne.jp</span
-      >
+      <i class="fas fa-envelope profile__contact-mail-icon" aria-hidden="true"></i>
+      <span class="profile__contact-mail-text">yuma-wakamiya@kalytero.ne.jp</span>
     </a>
 
     <div class="profile__contact-sns">
@@ -42,6 +37,15 @@
         aria-label="GitHub"
       >
         <i class="fab fa-github"></i>
+      </a>
+      <a
+        href="https://www.facebook.com/yuma.wakamiya/"
+        class="profile__contact-sns-link"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Facebook"
+      >
+        <i class="fab fa-facebook-f"></i>
       </a>
     </div>
   </div>
