--- a/src/404.html
+++ b/src/404.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <title>Redirecting...</title>
-  <meta name="robots" content="noindex" />
-  <script>
-    (function () {
-      const repoBase = "/";
-      const originalPath = location.pathname + location.search + location.hash;
-      const redirectPath = repoBase + "?" + encodeURIComponent(originalPath.replace(repoBase, ""));
-      location.replace(redirectPath);
-    })();
-  </script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Redirecting...</title>
+    <meta name="robots" content="noindex" />
+    <script>
+      (function () {
+        const repoBase = "/";
+        const originalPath = location.pathname + location.search + location.hash;
+        const redirectPath =
+          repoBase + "?" + encodeURIComponent(originalPath.replace(repoBase, ""));
+        location.replace(redirectPath);
+      })();
+    </script>
+  </head>
 </html>
