--- a/src/assets/pages/home.html
+++ b/src/assets/pages/home.html
@@ -1,22 +1,14 @@
 <section class="profile__home">
   <div class="profile__home-left">
     <h1 class="profile__home-name">ワカミヤ ユウマ</h1>
-    <h2 class="profile__home-title">portfolio</h2>
+    <h1 class="profile__home-title fx-rtl-grad">portfolio</h1>
     <p class="profile__home-subtitle">システムエンジニア</p>
   </div>
 
   <div class="profile__home-right">
     <div class="profile__home-photo-wrapper">
-      <img
-        src="assets/images/icon.jpg"
-        alt="プロフィール写真"
-        class="profile__home-photo"
-      />
-      <img
-        src="assets/images/bongo-cat-bongo.gif"
-        alt="ねこ"
-        class="profile__home-stamp"
-      />
+      <img src="assets/images/icon.jpg" alt="プロフィール写真" class="profile__home-photo" />
+      <img src="assets/images/bongo-cat-bongo.gif" alt="ねこ" class="profile__home-stamp" />
     </div>
   </div>
 </section>
