--- a/src/assets/pages/about.html
+++ b/src/assets/pages/about.html
@@ -318,8 +318,7 @@
     </ul>
 
     <div class="profile__about-cta">
-      <a class="btn" href="mailto:yuma-wakamiya@kalytero.ne.jp">お問い合わせ</a>
-      <a class="btn btn--ghost" href="/assets/resume.pdf" download rel="nofollow">履歴書（PDF）</a>
+      <a class="btn" href="/contact">お問い合わせ</a>
     </div>
   </div>
 </section>
