--- a/src/assets/pages/about.html
+++ b/src/assets/pages/about.html
@@ -315,6 +315,44 @@
           ></i>
         </a>
       </li>
+
+      <li class="affiliations__item">
+        <a
+          class="affiliations__card"
+          href="https://qiita.com/small-engineer"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <span class="affiliations__avatar" aria-hidden="true" data-initial="Qi"></span>
+          <span class="affiliations__meta">
+            <strong class="affiliations__name">Qiita</strong>
+            <span class="affiliations__role">small-engineer</span>
+          </span>
+          <i
+            class="fa-solid fa-arrow-up-right-from-square affiliations__ext"
+            aria-hidden="true"
+          ></i>
+        </a>
+      </li>
+
+      <li class="affiliations__item">
+        <a
+          class="affiliations__card"
+          href="https://github.com/small-engineer"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <span class="affiliations__avatar" aria-hidden="true" data-initial="GH"></span>
+          <span class="affiliations__meta">
+            <strong class="affiliations__name">GitHub</strong>
+            <span class="affiliations__role">small-engineer</span>
+          </span>
+          <i
+            class="fa-solid fa-arrow-up-right-from-square affiliations__ext"
+            aria-hidden="true"
+          ></i>
+        </a>
+      </li>
     </ul>
 
     <div class="profile__about-cta">
