--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>自己紹介</title>
     <link rel="stylesheet" href="assets/styles/main.css" />
-    <!-- フォント読み込み -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,14 +16,17 @@
       rel="stylesheet"
     />
   </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TKRBJL7FZ2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TKRBJL7FZ2');
+  </script>
 
   <body class="profile">
     <div id="site-header"></div>
-
-    <!-- ページ本体 -->
     <main id="app" class="profile__main"></main>
-
-    <!-- エントリーポイント -->
     <script type="module" src="assets/scripts/main.js"></script>
   </body>
 </html>
