画像読み込み回収

--- a/src/assets/pages/contact.html
+++ b/src/assets/pages/contact.html
@@ -6,7 +6,7 @@
     <p class="profile__contact-subtitle">お問合せ</p>
 
     <a href="mailto:yuma-wakamiya@kalytero.ne.jp" class="profile__contact-mail">
-      <i class="fas fa-envelope profile__contact-mail-icon" aria-hidden="true"></i>
+      <img src="assets/images/icons/fa-envelope.svg" alt="メール" class="profile__contact-mail-icon" />
       <span class="profile__contact-mail-text">yuma-wakamiya@kalytero.ne.jp</span>
     </a>
 
@@ -18,7 +18,7 @@
         rel="noopener noreferrer"
         aria-label="X"
       >
-        <i class="fab fa-x-twitter"></i>
+        <img src="assets/images/icons/fa-x-twitter.svg" alt="X" />
       </a>
       <a
         href="https://www.linkedin.com/in/yuma-wakamiya/"
@@ -27,7 +27,7 @@
         rel="noopener noreferrer"
         aria-label="LinkedIn"
       >
-        <i class="fab fa-linkedin-in"></i>
+        <img src="assets/images/icons/fa-linkedin-in.svg" alt="LinkedIn" />
       </a>
       <a
         href="https://github.com/small-engineer"
@@ -36,7 +36,7 @@
         rel="noopener noreferrer"
         aria-label="GitHub"
       >
-        <i class="fab fa-github"></i>
+        <img src="assets/images/icons/fa-github.svg" alt="GitHub" />
       </a>
       <a
         href="https://www.facebook.com/yuma.wakamiya/"
@@ -45,7 +45,7 @@
         rel="noopener noreferrer"
         aria-label="Facebook"
       >
-        <i class="fab fa-facebook-f"></i>
+        <img src="assets/images/icons/fa-facebook-f.svg" alt="Facebook" />
       </a>
     </div>
   </div>
